--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -59,7 +59,7 @@
   </div>
 
   <!-- SECTION PHOTO DU TERRAIN -->
-  <div class="col-md-6 quarter" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= Match::ADDRESSES[@match.address] %>);"></div>
+  <div class="col-md-6 quarter bg-image" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= Match::ADDRESSES[@match.address] %>);"></div>
 
   <!-- SECTION MESSAGE DE L'ORGANISATEUR -->
   <div class="col-md-6 quarter bgball part_three">
