--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -66,8 +66,8 @@
     <h4 class="p-3 part-three-text">Organizer's comment</h4>
 
     <!-- MISE EN FORME DU MESSAGE AVEC ASPECT CITATION BOOTSTRAP -->
-    <figure class="p-5 m-5">
-      <blockquote class="blockquote">
+    <figure class="message-orga">
+      <blockquote class="blockquote px-3">
         <p class="part-three-comment"><%= @match.comment %></p>
       </blockquote>
       <figcaption class="blockquote-footer">
