--- a/app/views/matches/recap.html.erb
+++ b/app/views/matches/recap.html.erb
@@ -26,8 +26,8 @@
 
         <div class="col-6">
           <div class="recap-team-card">
-            <p><%= @team_one.name %></p>
-            <% @team_one.users.each do |user| %>
+            <p><%= @team_two.name %></p>
+            <% @team_two.users.each do |user| %>
               <div class="cercle mx-1">
                 <% if user.photo.attached? %>
                   <%= cl_image_tag user.photo.key, height: 40, width: 40, crop: :thumb, gravity: :face %>
@@ -36,7 +36,7 @@
                 <% end %>
               </div>
             <% end %>
-            <% empty_spot = 3 - @team_one.participations.count %>
+            <% empty_spot = 3 - @team_two.participations.count %>
             <% empty_spot.times do %>
               <div class="empty mx-1"></div>
             <% end %>
@@ -52,12 +52,17 @@
     <div class="col-4">
       <div class="chatroom"
           data-controller="match-subscription"
-          data-match-subscription-match-id-value="<%= @match.id %>">
+          data-match-subscription-match-id-value="<%= @match.id %>"
+          data-match-subscription-current-user-id-value="<%= current_user.id %>">
         <h1><%= @match.teams.name %></h1>
         <div class="messages" data-match-subscription-target="messages"
         >
           <% @match.messages.each do |message| %>
-            <%= render "messages/message", message: message %>
+          <div class="message-row d-flex <%= message.sender?(current_user) ? 'justify-content-end' : 'justify-content-start' %>">
+            <div class="<%= message.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
+              <%= render "messages/message", message: message %>
+            </div>
+          </div>
           <% end %>
         </div>
         <%= simple_form_for [@match, @message],html: { data: { action: "turbo:submit-end->match-subscription#resetForm" }, class: "d-flex" } do |f|%>
