--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,8 @@
 <div id="message-<%= message.id %>">
   <small>
-    <strong><%= message.user.pseudo %></strong>
-    <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
+  <div class="d-flex align-items-center">
+ <%= cl_image_tag message.user.photo.key, height: 40, width: 40, crop: :thumb, gravity: :face, style:"border-radius: 50px"%> <p class="mb-0"><%=message.content.capitalize%></p>
+</div>
   </small>
-  <p><%= message.content %></p>
+    <i><%= message.created_at.strftime("at %l:%M %p") %></i>
 </div>
