--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
               <%= link_to "Create a game", new_match_path, class: "nav-link"%>
             </li>
             <li class="nav-item">
-              <%= link_to "Messages", "#", class: "nav-link" %>
+              <%= link_to "#{current_user.pseudo}", profile_path(current_user), class: "nav-link" %>
             </li>
             <li class="nav-item dropdown">
               <% if current_user.photo.attached? %>
