boutton en dessous

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -95,6 +95,7 @@ ul{
     transition: 1s;
     box-shadow: 6px 6px 0 black;
     transform: skewX(-15deg);
+    width: fit-content;
 }
 
 a.ctaa:focus {
