--- a/app/assets/stylesheets/pages/_recap.scss
+++ b/app/assets/stylesheets/pages/_recap.scss
@@ -1,3 +1,25 @@
-.card {
 
+.recap-team-card {
+  background-color: #FBEEDA;
+  padding: 10px;
+  border-radius: 10px;
+  position: relative;
+  // display: flex;
+  // flex-direction: row;
+  margin-bottom: 2em;
+
+  h4{
+    text-align: center;
+    display: block;
+  }
+  .player-avatar{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .column{
+    display: flex;
+    flex-direction: column;
+
+  }
 }
