--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -2,25 +2,35 @@
 <div class="d-flex home">
   <div class="flex-fill container-fluid mx-3 col-8">
     <div class="row">
-      <%= form_with url: matches_path, method: :get do |f| %>
+    <div id='demo' style='display: none'>
+        <%= form_with url: matches_path, method: :get do |f| %>
+      <div class="d-flex filter-form">
+        <!--
         <label>
+          Hide full games&nbsp;
           <%= f.check_box :free_slots, {}, true, false %>
-          Hide full games
         </label>
+        -->
         <label>
-          Difficulty:
+          Difficulty
           <%= f.select :level_rating, ["Any", ["District", 1], ["Pro A", 2], ["NBA", 3]], selected: params[:level_rating] %>
         </label>
         <label>
-          Arrondissement:
+          &nbsp;Arrondissement
           <%= f.select :address, ["Any", ["1er", '75001'], ["2ème", '75002'], ["3ème", '75003'], ["4ème", '75004'], ["5ème", '75005'], ["6ème", '75006'], ["7ème", '75007'], ["8ème", '75008'], ["9ème", '75009'], ["10ème", '75010,'], ["11ème", '75011,'], ["12ème", '75012'], ["13ème", '75013'], ["14ème", '75014,'], ["15ème", '75015'], ["16ème", '75016'], ["17ème", '75017'], ["18ème", '75018'], ["19ème", '75019'], ["20ème", '75020']], selected: params[:address] %>
         </label>
         <label>
-          Date:
+          &nbsp;Date
           <%= f.select :date, ["Anyday", "Today", "Tomorrow", "This week", "Next week"], selected: params[:date] %>
         </label>
-        <%= f.submit 'Apply filters' %>
+      </div>
+        <%#= f.button :submit, 'Apply filters' %>
+        <span class="filtersubmit"><%= f.button "Apply filters" %></span>
+
       <% end %>
+    </div>
+    <button type='button' id='filters' onclick="toggleText()">Click to filter results</button>
+
       <!-- ITERATION AUTOUR DE CHAQUE MATCH -->
       <% @matches.each do |match| %>
         <div class="col-6">
