--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,5 +1,4 @@
 <%= image_tag "3v3-basket", class: "poster" %>
-<h1><%= @user.email %></h1>
 <div class="container mt-3" >
   <div class="success">
    <div class="card"><h2> <%= "Profile de #{current_user.pseudo}" %>  </h2>
@@ -20,8 +19,7 @@
             </div>
 
             <div class="bio-user"><h4>Bio</h4>
-              <p>Je jouais au basketball en club quand j'étais petit, j'ai un niveau correct, je jouais avec le fils de Lebron, si t'es un bon tu vois qui s'est.
-            Bref j'ai hate de jouer avec vous !</p>
+              <p>feur</p>
         </div>
             <div class=""></div>
             <p></p>
