Style du filtre des matchs

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon <%= "navbar-transparent" if params[:action]=="home" %>">
+  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon <%= "navbar-transparent" if params[:action]=="home" %> <%= "navbar-show" if params[:action]=="show" %> ">
     <div class="container-fluid">
     <%= link_to root_path, class: "navbar-brand" do %>
         <%= image_tag "balllogo" %>
