--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,6 +14,10 @@
   width: 40px;
 }
 
+.navbar.navbar-show{
+  border-bottom: solid 2px;
+}
+
 .navbar.navbar-transparent {
   position: absolute;
   top: 0;
