--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -80,9 +80,9 @@
   <div class="col-md-6 quarter" style="background-color:black; color:white;">
     <h4 class="p-3">Save the date</h4>
     <ul class="p-3 m-3">
-      <li><h2 style="text-decoration:none; font-size:bold;"><%= @match.date.strftime('%A %d %B') %> à <%= @match.date.strftime('%H') %>h</h2></li>
-      <li>Rendez-vous au <%= @match.address %></li>
-      <li>Niveau de jeu <%= @match.category %></li>
+      <li><h2 style="text-decoration:none; font-size:bold; color:#ffa502"><%= @match.date.strftime('%A %d %B') %> at <%= @match.date.strftime('%H') %>h</h2></li>
+      <li>Appointment: <%= @match.address %></li>
+      <li>Game level: <%= @match.category %></li>
     </ul>
     <div class="wrapper">
   <%= link_to recap_path(@match), class:"ctaa" do  %>
