--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,3 +1,4 @@
+
 <div class="contents">
 
   <!-- SECTION TEAMS-->
@@ -26,7 +27,7 @@
           </div>
           <p class="mx-auto"><%= empty_spot %> <%= 'spot'.pluralize(empty_spot) %> <%= 'left'.pluralize(empty_spot) %></p>
           <% if @team_one.can_accept?(current_user) %>
-            <%= link_to "Join the team", team_participations_path(@team_one), class: 'btn btn-dark', data: {turbo_method: :post} %>
+            <%= link_to "Join the team", team_participations_path(@team_one), class: 'orange-btn', data: {turbo_method: :post} %>
           <% end %>
         </div>
       </div>
@@ -51,7 +52,7 @@
           </div>
           <p class="mx-auto"><%= empty_spot %> <%= 'spot'.pluralize(empty_spot) %> <%= 'left'.pluralize(empty_spot) %></p>
           <% if @team_two.can_accept?(current_user) %>
-            <%= link_to "Join the team", team_participations_path(@team_two), class: 'btn btn-dark', data: {turbo_method: :post} %>
+            <%= link_to "Join the team", team_participations_path(@team_two), class: 'orange-btn', data: {turbo_method: :post} %>
           <% end %>
         </div>
       </div>
@@ -100,7 +101,6 @@
     </div>
   </div>
   </div>
-
 
 
 
