--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -8,12 +8,13 @@
 
 .quarter{
   width:50%;
-  height:100%;
+  height:50%;
   float:left;
 }
 .contents{
-  height:47%;
-  width:100%;
+  height:calc(100vh - 68px);
+  // width:100%;
+
 }
 .cercle{
   width: 40px;
@@ -42,6 +43,10 @@
 }
 .card{
   background-color:#FBEEDA;
+  .orange-btn {
+    text-align: center;
+    font-size: 1rem;
+  }
 }
 .part-one{
   background-color:orange;
@@ -212,7 +217,7 @@ label, legend {
   abbr {
     display: none;
   }
-  
+
 }
 
 
@@ -245,8 +250,7 @@ label, legend {
     font-size:16px;
   }
 }
-@media only screen and (max-height: 850px) {
-  .contents{
-    height: 45.4%;
-  }
-}
+// @media only screen and (max-height: 850px) {
+//   .contents{
+//     height: 45.4%;
+//   }
