--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -178,6 +178,9 @@ a.ctaa:hover path.two {
   border: 1px solid #EAEAEA;
   border-radius: 16px;
   background-color: white;
+  padding: 1rem 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .category-selector:checked + label {
@@ -186,31 +189,53 @@ a.ctaa:hover path.two {
 
 #match_level_rating_district + label {
   color: rgba(244,162,64,1);
+  &:hover{
+    color: white;
+    background-color :rgba(244,162,64,1);
+    opacity: 0.5;
+    border: solid 3px black;
+  }
 }
 
 #match_level_rating_district:checked + label {
   background-color:rgba(244,162,64,1);
   border-color:rgba(244,162,64,1);
+  border: solid 3px black;
+
 }
 
 
 #match_level_rating_pro_a + label {
   color: rgba(255,113,67,1);
+  &:hover{
+    color: white;
+    background-color: rgba(255,113,67,1);
+    opacity: 0.5;
+    border: solid 3px black;
+  }
 }
 
 #match_level_rating_pro_a:checked + label {
   background-color:  rgba(255,113,67,1);
   border-color: rgba(255,113,67,1);
+  border: solid 3px black;
 }
 
 
 #match_level_rating_nba + label {
   color:  rgba(255,53,127,1);
+  &:hover{
+    color: white;
+    background-color:  rgba(255,53,127,1);
+    opacity: 0.5;
+    border: solid 3px black;
+  }
 }
 
 #match_level_rating_nba:checked + label {
   background-color:  rgba(255,53,127,1);
   border-color:  rgba(255,53,127,1);
+  border: solid 3px black;
 }
 
 label, legend {
